--- a/ChessDataAnalysis.ipynb
+++ b/ChessDataAnalysis.ipynb
@@ -58,22 +58,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array(['Resigned', 'Checkmated', 'Draw agreed', 'Win', 'Timeout',\n",
-       "       'Abandoned', 'Stalemate', 'Draw by repetition',\n",
-       "       'Insufficient material', 'Draw by 50-move rule',\n",
-       "       'Opponent King reached the hill', 'Checked for the 3rd time',\n",
-       "       'Draw by timeout vs insufficient material'], dtype=object)"
-      ]
-     },
-     "execution_count": 387,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'chess_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-9d996b0651e5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mchess_data\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Player Result'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'chess_data' is not defined"
+     ]
     }
    ],
    "source": [
@@ -2718,7 +2715,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
